feat:实现短信验证码
使用阿里云短信服务发短信，使用redis保存，手机号码作为key，验证码为value.

--- a/shop-api/user-api/nacos-preview.yaml
+++ b/shop-api/user-api/nacos-preview.yaml
@@ -13,3 +13,17 @@ consul:
 
 jwt:
   key: 'LqyebYfpj30vvaasqtZ9nokn4x3qjhTB'
+
+aliyun:
+  key: 'LTAIN1iOOhkf7Nc8'
+  secrect: 'rr4tVYT0OmLQ7jDOAAaqEoczTlGIPD'
+
+sms:
+  sign_name: '阿里云短信测试'
+  template_code: 'SMS_154950909'
+
+
+redis:
+  host: '192.168.0.101'
+  port: 6379
+  expire: 300
