--- a/shop-srvs/goods-srv/nacos-preview.yaml
+++ b/shop-srvs/goods-srv/nacos-preview.yaml
@@ -5,7 +5,7 @@ tags: ['xuwei','goods','srv']
 mysql:
   host: '192.168.0.101'
   port: 3306
-  db:   'shop_user_srv'
+  db:   'shop_goods_srv'
   user: 'root'
   password: 'root'
 
