--- a/shop-srvs/inventory-srv/nacos-preview.yaml
+++ b/shop-srvs/inventory-srv/nacos-preview.yaml
@@ -1,11 +1,11 @@
 name: 'inventory-srv'
 host: '192.168.0.113'
-tags: ['xuwei','goods','srv']
+tags: ['xuwei','inventory','srv']
 
 mysql:
   host: '192.168.139.9'
   port: 3306
-  db:   'inventory_goods_srv'
+  db:   'shop_inventory_srv'
   user: 'root'
   password: 'root'
 
