--- a/shop-api/order-api/nacos-preview.yaml
+++ b/shop-api/order-api/nacos-preview.yaml
@@ -10,6 +10,9 @@ order_srv:
 goods_srv:
   name: 'goods-srv'
 
+inventory_srv:
+  name: 'inventory-srv'
+
 consul:
   host: '192.168.139.9'
   port: 8500
