--- a/shop-api/userop-api/nacos-preview.yaml
+++ b/shop-api/userop-api/nacos-preview.yaml
@@ -7,6 +7,9 @@ tags: ['xuwei','userop','api']
 userop_srv:
   name: 'userop-srv'
 
+goods_srv:
+  name: 'goods-srv'
+
 consul:
   host: '192.168.139.9'
   port: 8500
