feat:集成sentinel，为获取商品列表接口加限流控制

--- a/shop-api/goods-api/nacos-preview.yaml
+++ b/shop-api/goods-api/nacos-preview.yaml
@@ -23,3 +23,10 @@ jaeger:
   host: '192.168.139.9'
   port: 6831
   name: 'goods-api'
+
+sentinel:
+  resource: 'goods-list'
+  strategy: 0
+  behavior: 0
+  threshold: 20
+  interval: 6000
